--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build && cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/",
+    "build": "next build",
     "start": "NODE_ENV=production bun .next/standalone/server.js 2>&1 | tee server.log",
     "lint": "next lint",
     "db:push": "prisma db push",
@@ -60,14 +60,14 @@
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^16.1.3",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.11.1",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^10.0.0",
     "react-markdown": "^10.1.0",
